--- a/portfolio.html
+++ b/portfolio.html
@@ -11,130 +11,137 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+			integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
+		<link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 	<body>
 		<header class="header">
-			<div class="container">
-			<nav class="nav">
-				<a class="logo" href="index.html">
-					<span>WEB</span>
-					STUDIO
-				</a>
-				<ul class="links">
-					<li><a class="nav-link" href="index.html">Studio</a></li>
-					<li><a class="nav-link current" href="./portfolio.html">Portfolio</a></li>
-					<li><a class="nav-link" href="">Contacts</a></li>
-				</ul>
+			<div class="container nav-container">
+				<nav class="nav">
+					<a class="logo" href="index.html">
+						<span>WEB</span>
+						STUDIO
+					</a>
+					<ul class="links">
+						<li><a class="nav-link" href="index.html">Studio</a></li>
+						<li><a class="nav-link current" href="./portfolio.html">Portfolio</a></li>
+						<li><a class="nav-link" href="">Contacts</a></li>
+					</ul>
+				</nav>
 				<ul class="contacts">
 					<li><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a class="contact-link" href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
 				</ul>
-			</nav>
-	
+			</div>
 		</header>
-	</div>
+
 		<main>
-			<section>
+			<section class="portfolio-section">
 				<h1 class="visually-hidden">Portfolio page</h1>
 				<div class="container">
-				<ul class="buttons-portfolio">
-					<li><button class="btn btn-white" type="button">All</button></li>
-					<li><button class="btn btn-white" type="button">Web Site</button></li>
-					<li><button class="btn btn-white" type="button">App</button></li>
-					<li><button class="btn btn-white" type="button">Design</button></li>
-					<li><button class="btn btn-white" type="button">Marketing</button></li>
-				</ul>
-			</div>
-				<h2 class="visually-hidden">Articles</h2>
-				<div class="container">
-				<ul class="articles-portfolio">
-					<li>
-						<img src="./images/foto1hm2.jpg" alt="photo1" width="360" />
-						<div class="text-article">
-						<h3 class="title">Banking App Interface Concept</h3>
-						<p class="description">App</p>
-						</div>
-					</li>
+					<ul class="buttons-portfolio">
+						<li><button class="btn btn-white" type="button">All</button></li>
+						<li><button class="btn btn-white" type="button">Web Site</button></li>
+						<li><button class="btn btn-white" type="button">App</button></li>
+						<li><button class="btn btn-white" type="button">Design</button></li>
+						<li><button class="btn btn-white" type="button">Marketing</button></li>
+					</ul>
 
-					<li>
-						<img src="./images/foto2hm2.jpg" alt="photo2" width="360" />
-						<div class="text-article">
-						<h3 class="title">Cashless Payment</h3>
-						<p class="description">Marketing</p>
-						</div>
-					</li>
+					<h2 class="visually-hidden">Articles</h2>
 
-					<li>
-						<img src="./images/foto3hm2.jpg" alt="photo3" width="360" />
-						<div class="text-article">
-						<h3 class="title">Meditaion App</h3>
-						<p class="description">App</p>
-						</div>
-					</li>
+					<ul class="articles-portfolio">
+						<li>
+							<img src="./images/foto1hm2.jpg" alt="photo1" width="360" />
+							<div class="title-description">
+								<h3 class="title">Banking App Interface Concept</h3>
+								<p class="description">App</p>
+							</div>
+						</li>
 
-					<li>
-						<img src="./images/foto4hm2.jpg" alt="photo4" width="360" />
-						<div class="text-article">
-						<h3 class="title">Taxi Service</h3>
-						<p class="description">Marketing</p>
-						</div>
-					</li>
+						<li>
+							<img src="./images/foto2hm2.jpg" alt="photo2" width="360" />
+							<div class="title-description">
+								<h3 class="title">Cashless Payment</h3>
+								<p class="description">Marketing</p>
+							</div>
+						</li>
 
-					<li>
-						<img src="./images/foto5hm2.jpg" alt="photo5" width="360" />
-						<div class="text-article">
-						<h3 class="title">Screen Illustrations</h3>
-						<p class="description">Design</p>
-						</div>
-					</li>
+						<li>
+							<img src="./images/foto3hm2.jpg" alt="photo3" width="360" />
+							<div class="title-description">
+								<h3 class="title">Meditaion App</h3>
+								<p class="description">App</p>
+							</div>
+						</li>
 
-					<li>
-						<img src="./images/foto6hm2.jpg" alt="photo6" width="360" />
-						<div class="text-article">
-						<h3 class="title">Online Courses</h3>
-						<p class="description">Marketing</p>
-						</div>
-					</li>
+						<li>
+							<img src="./images/foto4hm2.jpg" alt="photo4" width="360" />
+							<div class="title-description">
+								<h3 class="title">Taxi Service</h3>
+								<p class="description">Marketing</p>
+							</div>
+						</li>
 
-					<li>
-						<img src="./images/foto7hm2.jpg" alt="photo7" width="360" />
-						<div class="text-article">
-						<h3 class="title">Instagram Stories Concept</h3>
-						<p class="description">Design</p>
-						</div>
-					</li>
+						<li>
+							<img src="./images/foto5hm2.jpg" alt="photo5" width="360" />
+							<div class="title-description">
+								<h3 class="title">Screen Illustrations</h3>
+								<p class="description">Design</p>
+							</div>
+						</li>
 
-					<li>
-						<img src="./images/foto8hm2.jpg" alt="photo8" width="360" />
-						<div class="text-article">
-						<h3 class="title">Organic Food</h3>
-						<p class="description">Web Site</p>
-						</div>
-					</li>
+						<li>
+							<img src="./images/foto6hm2.jpg" alt="photo6" width="360" />
+							<div class="title-description">
+								<h3 class="title">Online Courses</h3>
+								<p class="description">Marketing</p>
+							</div>
+						</li>
 
-					<li>
-						<img src="./images/foto9hm2.jpg" alt="photo9" width="360" />
-						<div class="text-article">
-						<h3 class="title">Fresh Coffee</h3>
-						<p class="description">Web Site</p>
-						</div>
-					</li>
-				</ul>
-			</div>
+						<li>
+							<img src="./images/foto7hm2.jpg" alt="photo7" width="360" />
+							<div class="title-description">
+								<h3 class="title">Instagram Stories Concept</h3>
+								<p class="description">Design</p>
+							</div>
+						</li>
+
+						<li>
+							<img src="./images/foto8hm2.jpg" alt="photo8" width="360" />
+							<div class="title-description">
+								<h3 class="title">Organic Food</h3>
+								<p class="description">Web Site</p>
+							</div>
+						</li>
+
+						<li>
+							<img src="./images/foto9hm2.jpg" alt="photo9" width="360" />
+							<div class="title-description">
+								<h3 class="title">Fresh Coffee</h3>
+								<p class="description">Web Site</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
 			<div class="container">
 				<div class="footer-info">
-			<a class="logo" href="/">
-				<span>WEB</span>
-				STUDIO
-			</a>
-			<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-		</div>
-		</footer>
+					<a class="logo" href="/">
+						<span>WEB</span>
+						STUDIO
+					</a>
+					<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+				</div>
 			</div>
+		</footer>
 	</body>
 </html>
