--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-			integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-			crossorigin="anonymous"
-			referrerpolicy="no-referrer"
-		/>
-		<link href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" rel="stylesheet" />
+
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 
@@ -55,25 +49,25 @@
 				<div class="container">
 					<h2 class="visually-hidden">Our features</h2>
 					<ul class="feature-container">
-						<li>
+						<li class="feature-item">
 							<h3 class="title">Strategy</h3>
 							<p class="description">
 								Our goal is to identify the business problem to walk away with the perfect and creative solution.
 							</p>
 						</li>
-						<li>
+						<li class="feature-item">
 							<h3 class="title">Punctuality</h3>
 							<p class="description">
 								Bring the key message to the brand's audience for the best price within the shortest possible time.
 							</p>
 						</li>
-						<li>
+						<li class="feature-item">
 							<h3 class="title">Diligence</h3>
 							<p class="description">
 								Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
 							</p>
 						</li>
-						<li>
+						<li class="feature-item">
 							<h3 class="title">Technologies</h3>
 							<p class="description">
 								Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -104,7 +98,7 @@
 					<ul class="team-foto-index">
 						<li>
 							<img src="./images/foto4.jpg" alt="Our Team Mark Guerrero" width="264" />
-							<div class="title-description">
+							<div class="title-description-team">
 								<h3 class="title">Mark Guerrero</h3>
 								<p class="description">Product Designer</p>
 							</div>
@@ -112,7 +106,7 @@
 
 						<li>
 							<img src="./images/foto5.jpg" alt="Our Team Tom Ford" width="264" />
-							<div class="title-description">
+							<div class="title-description-team">
 								<h3 class="title">Tom Ford</h3>
 								<p class="description">Frontend Developer</p>
 							</div>
@@ -120,7 +114,7 @@
 
 						<li>
 							<img src="./images/foto6.jpg" alt="Our Team Camila Garcia" width="264" />
-							<div class="title-description">
+							<div class="title-description-team">
 								<h3 class="title">Camila Garcia</h3>
 								<p class="description">Marketing</p>
 							</div>
@@ -128,7 +122,7 @@
 
 						<li>
 							<img src="./images/foto7.jpg" alt="Our Team Daniel Wilson" width="264" />
-							<div class="title-description">
+							<div class="title-description-team">
 								<h3 class="title">Daniel Wilson</h3>
 								<p class="description">UI Designer</p>
 							</div>
@@ -140,13 +134,13 @@
 
 		<footer class="footer">
 			<div class="container">
-				<div class="footer-info">
+				
 					<a class="logo" href="/">
 						<span>WEB</span>
 						STUDIO
 					</a>
 					<p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-				</div>
+				
 			</div>
 		</footer>
 	</body>
